postgres-macros/tests/fail-stable/scalar_mismatch.stderr
error[E0271]: type mismatch resolving `<String as SqlType>::Type == i64`
 --> tests/fail-stable/scalar_mismatch.rs:5:56
  |
5 |     let _: String = sql!("SELECT COUNT(*) FROM users").await.unwrap();
  |                                                        ^^^^^ expected `String`, found `i64`
  |
  = note: required for `Sql<'_, Literal<i64>, String>` to implement `IntoFuture`
